--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3002
-DB_URL="mongodb://localhost/apiDb"
+DB_URL= "mongodb+srv://hassanoladipupo:root@hassanoladipupo.vdfhcxr.mongodb.net/Learn-Node-Api"
+
